{
    "name": "InputMap",
    "maps": [
        {
            "name": "ScreenInput",
            "id": "7693d093-3f04-4560-8cfb-06ad4a4b0b19",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "a2b99d62-0a04-4e1c-a1e0-ba07f19609a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "db81dcad-6eea-436e-bde7-235643ecfb9a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0a9247b3-88aa-45ba-9cd3-638b4eaee781",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cad3c5c5-e93d-4b29-aec9-bfa5fc6eff9c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}